[tool.poetry]
name = "fizz-buzz"
version = "0.1.0"
description = ""
authors = ["matheuslpolidoro <mattpolidoro4@gmail.com>"]
readme = "README.md"
packages = [{include = "fizz_buzz"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"
ignr = "^2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue --check --diff . & isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=fizz_buzz -vv"
post_test = "coverage html"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = "79"
